# ply-visualizer

./: .eslintrc.json  .gitignore  .prettierignore  .vscodeignore  CAMERA_CALIBRATION_FORMATS.md  CHANGELOG.md  CLAUDE.md  LICENSE  PERFORMANCE_PLAN.md  README.md  SUPPORTED_FORMATS.md  SVELTE_TRANSITION.md  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  svelte.config.js  test-playwright-ply.js  test-server.js  test-stl.js  test-webview.html  test_calibration_parsers.js  test_npy_integration.js  tsconfig.json  vite.config.ts  vitest.config.js  vitest.config.ts  vitest.setup.ts  webpack.config.js
docs/: BACKLOG.md  CAMERA_CALIBRATION_FORMATS.md  SVELTE_MIGRATION_PLAN.md  main-refactoring-plan.md  plan-middlebury-example.md  point-cloud-selection-plan.md  svelte-migration-plan.md
engine/: README.md  index.html  package.json  svelte.config.js  tsconfig.json  webpack.config.js
media/: geotiff.js.map  main.js  style.css  three-orbit-controls.js
playwright-report/: index.html
src/: extension.ts  gltfParser.ts  mtlParser.ts  objParser.ts  offParser.ts  plyEditorProvider.ts  plyParser.ts  pointCloudEditorProvider.ts  ptsParser.ts  tifConverter.ts  tifParser.ts  types.ts  wasmPointcloud.ts
wasm/pointcloud-parser/: Cargo.toml
wasm/pointcloud-parser/examples/: convert_ply_lidar.rs
wasm/pointcloud-parser/pkg/: pointcloud_parser.d.ts  pointcloud_parser.js  pointcloud_parser_bg.wasm
wasm/pointcloud-parser/pkg-web/: package.json  pointcloud_parser.d.ts  pointcloud_parser.js  pointcloud_parser_bg.wasm  pointcloud_parser_bg.wasm.d.ts
wasm/pointcloud-parser/src/: lib.rs  lidar.rs
(+492 files in other folders)
